@@ -338,7 +338,7 @@ void CGUIFileOpenDialog::draw()
 
 		IGUIFont* font = skin->getFont(EGDF_WINDOW);
 		if (font)
-			font->draw(Text.c_str(), rect,
+			font->draw(Text, rect,
 					skin->getColor(EGDC_ACTIVE_CAPTION),
 					false, true, &AbsoluteClippingRect);
 	}
