@@ -88,7 +88,7 @@ void CGUIMenu::draw()
 				c = EGDC_GRAY_TEXT;
 
 			if (font)
-				font->draw(Items[i].Text.c_str(), rect,
+				font->draw(Items[i].Text, rect,
 					skin->getColor(c), true, true, &AbsoluteClippingRect);
 		}
 	}
